Fix font size of scroll bottom button on mobile screen.

--- a/assets/style.css
+++ b/assets/style.css
@@ -93,6 +93,8 @@ h1 {
         height: 2rem;
         padding-top: 0.33rem;
         border-radius: 0.5rem;
+    }
+    #scroll-bottom span {
         font-size: 1.33rem;
     }
 
